# oop-mai-lab6

./: README.md
lab6/: CMakeLists.txt
lab6/include/: combat_visitor.hpp  dungeon.hpp  factory.hpp  npc.hpp  npc_types.hpp
lab6/src/: combat_visitor.cpp  dungeon.cpp  event_manager.cpp  factory.cpp  main.cpp  npc.cpp
lab6/tests/: test_main.cpp
